Fix link with icon alignment on mobile.

--- a/tools/scss/styles.scss
+++ b/tools/scss/styles.scss
@@ -147,8 +147,7 @@ a {
 
     &.link-with-icon {
         display: flex;
-        align-items: center;
-        @include links-font(16px, 600);
+        @include links-font(16px, 600, 22px);
         color: $link-with-icon-text-color;
         text-transform: uppercase;
         transition: all .2s ease-in-out;
@@ -168,9 +167,11 @@ a {
         }
 
         .text {
+            margin-left: 10px;
+            padding-top: 5px;
+
             @extend %ellipsis;
 
-            margin-left: 10px;
         }
     }
 }
@@ -580,6 +581,7 @@ body {
                             flex-direction: column;
 
                             .link-with-icon {
+                                align-items: center;
                                 margin-top: 30px;
 
                                 .icon {
@@ -600,6 +602,10 @@ body {
                                         height: 40px;
                                         background: url(../img/icon-facebook.svg) no-repeat center center;
                                     }
+                                }
+
+                                .text {
+                                    padding-top: 0;
                                 }
                             }
                         }
